--- a/C1/W1/assignment/C1W1_Assignment.ipynb
+++ b/C1/W1/assignment/C1W1_Assignment.ipynb
@@ -21,14 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "PUNO2E6SeURH",
-    "tags": [
-     "graded"
-    ]
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mpip\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minstall tensorflow\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np"
@@ -51,19 +69,19 @@
     "    \n",
     "    # Define input and output tensors with the values for houses with 1 up to 6 bedrooms\n",
     "    # Hint: Remember to explictly set the dtype as float\n",
-    "    xs = None\n",
-    "    ys = None\n",
+    "    xs = [50.000, 100.000, 150.000, 200.000, 250.000, 300.000]\n",
+    "    ys = [1, 2, 3, 4, 5, 6]\n",
     "    \n",
     "    # Define your model (should be a model with 1 dense layer and 1 unit)\n",
-    "    model = None\n",
+    "    model = tf.keras.Sequential([tf.keras.layers.Dense(units=1, input_shape=[1])])\n",
     "    \n",
     "    # Compile your model\n",
     "    # Set the optimizer to Stochastic Gradient Descent\n",
     "    # and use Mean Squared Error as the loss function\n",
-    "    model.compile(optimizer=None, loss=None)\n",
+    "    model.compile(optimizer='SGD', loss='MeanSquaredError')\n",
     "    \n",
     "    # Train your model for 1000 epochs by feeding the i/o tensors\n",
-    "    model.fit(None, None, epochs=None)\n",
+    "    model.fit(xs, xy, epochs=1000)\n",
     "    \n",
     "    ### END CODE HERE\n",
     "    return model"
@@ -148,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
